syntax = "proto3";
package trading_settings_integration;
import "google/protobuf/empty.proto";

message TradingGroupGrpcModel{
    string Id = 1;
    string Name = 2;
    string TradingProfileId = 3;
    bool TradingDisabled = 4;
}

message TradingProfileGrpcModel{
    string Id = 1;
    double MarginCallPercent = 2;
    double StopOutPercent = 3;
    repeated trading_settings_integration.TradingProfileInstrumentGrpcModel TradingProfileInstruments = 4;
}

message TradingProfileInstrumentGrpcModel{
    string Id = 1;
    uint64 MinOperationVolume = 2;
    uint64 MaxOperationVolume = 3;
    uint64 MaxPositionVolume = 4;
    uint64 OpenPositionMinDelayMs = 5;
    uint64 OpenPositionMaxDelayMs = 6;
    bool TpSlippage = 7;
    bool SlSlippage = 8;
    bool IsTrending = 9;
    bool OpenPositionSlippage = 10;
    repeated uint32 Leverages = 11;
    double StopOutPercent = 12;
}

message TradingInstrumentGrpcModel{
    string Id = 1;
    string Name = 2;
    uint32 Digits = 3;
    string Base = 4;
    string Quote = 5;
    double TickSize = 6;
    bool TradingDisabled = 7;
    repeated trading_settings_integration.TradingInstumentDayOffGrpcModel TradingInstrumentDayOffs = 8;
}

message TradingInstumentDayOffGrpcModel{
    uint32 DayFrom = 1;
    string TimeFrom = 2;
    uint32 DayTo = 3;
    string TimeTo = 4;
}
message PingResponse{
    string ServiceName = 1;
    uint64 DateTime = 2;
  }

service TradingSettingsIntegrationGrpcService {
    rpc GetTradingInstuments(google.protobuf.Empty) returns (stream trading_settings_integration.TradingInstrumentGrpcModel);
    rpc GetTradingProfiles(google.protobuf.Empty) returns (stream trading_settings_integration.TradingProfileGrpcModel);
    rpc GetTradingGroups(google.protobuf.Empty) returns (stream trading_settings_integration.TradingGroupGrpcModel);
    rpc Ping(google.protobuf.Empty) returns(trading_settings_integration.PingResponse);
}